added line graph

--- a/src/PiecewiseLinearFunctionDesigner.Module.Demonstration/Views/FunctionGraphView.xaml
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Demonstration/Views/FunctionGraphView.xaml
@@ -1,9 +1,16 @@
 ﻿<UserControl x:Class="PiecewiseLinearFunctionDesigner.Module.Demonstration.Views.FunctionGraphView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
-             prism:ViewModelLocator.AutoWireViewModel="True" Padding="25">
-    <StackPanel Visibility="{Binding ControlVisibility}">
-        <TextBlock Text="Здесь будет график функций"/>
-    </StackPanel>
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:d3="clr-namespace:InteractiveDataDisplay.Core;assembly=InteractiveDataDisplay.Core"
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             Height="450" Width="450">
+    <Grid Visibility="{Binding ControlVisibility}">
+        <d3:Chart IsXAxisReversed="False" BottomTitle="{Binding TextLocalization.Temperature}" LeftTitle="{Binding TextLocalization.AbsoluteMark}">
+            <d3:Chart.Title>
+                <TextBlock HorizontalAlignment="Left" FontSize="12" Text="{Binding TextLocalization.Graph}"></TextBlock>
+            </d3:Chart.Title>
+            <ItemsControl ItemsSource="{Binding Lines}"></ItemsControl>
+        </d3:Chart>
+    </Grid>
 </UserControl>
