--- a/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionsListView.xaml
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionsListView.xaml
@@ -2,21 +2,41 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"
-             prism:ViewModelLocator.AutoWireViewModel="True" Padding="25">
-    <ScrollViewer CanContentScroll="True" Height="150" Visibility="{Binding ControlVisibility}">
-        <StackPanel Orientation="Vertical">
-            <TextBlock Text="{Binding TextLocalization.Functions}"></TextBlock>
-            <Grid>
-                <ListView ItemsSource="{DynamicResource ResourceKey=Functions}" >
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=Enabled}"></GridViewColumn>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Header="{Binding TextLocalization.Function}"></GridViewColumn>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
-            </Grid>
-            <Button Command="{Binding AddFunctionCommand}" Width="200" Content="{Binding TextLocalization.Add}" HorizontalAlignment="Left"></Button>
-        </StackPanel>
-    </ScrollViewer>
+             prism:ViewModelLocator.AutoWireViewModel="True">
+    <DockPanel>
+        <ScrollViewer CanContentScroll="True" Visibility="{Binding ControlVisibility}" DockPanel.Dock="Top">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="{Binding TextLocalization.Functions}"></TextBlock>
+                <Grid>
+                    <ListView ItemsSource="{Binding Functions}">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Width="30">
+                                    <GridViewColumnHeader>
+                                        <TextBlock Text=""/>
+                                    </GridViewColumnHeader>
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <CheckBox IsChecked="{Binding Path=Enabled}" />
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn>
+                                    <GridViewColumnHeader HorizontalAlignment="Left">
+                                        <TextBlock Text="{Binding TextLocalization.Function}"/>
+                                    </GridViewColumnHeader>
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Path=Name}" HorizontalAlignment="Left"/>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </Grid>
+                <Button Command="{Binding AddFunctionCommand}" Width="200" Content="{Binding TextLocalization.Add}" HorizontalAlignment="Left"></Button>
+            </StackPanel>
+        </ScrollViewer>
+    </DockPanel>
 </UserControl>
