bound table changes to the model

--- a/src/PiecewiseLinearFunctionDesigner.Module.Demonstration/Views/FunctionGraphView.xaml
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Demonstration/Views/FunctionGraphView.xaml
@@ -3,14 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:d3="clr-namespace:InteractiveDataDisplay.Core;assembly=InteractiveDataDisplay.Core"
-             prism:ViewModelLocator.AutoWireViewModel="True"
-             Height="450" Width="450">
-    <Grid Visibility="{Binding ControlVisibility}">
-        <d3:Chart IsXAxisReversed="False" BottomTitle="{Binding TextLocalization.Temperature}" LeftTitle="{Binding TextLocalization.AbsoluteMark}">
-            <d3:Chart.Title>
-                <TextBlock HorizontalAlignment="Left" FontSize="12" Text="{Binding TextLocalization.Graph}"></TextBlock>
-            </d3:Chart.Title>
-            <ItemsControl ItemsSource="{Binding Lines}"></ItemsControl>
-        </d3:Chart>
-    </Grid>
+             prism:ViewModelLocator.AutoWireViewModel="True">
+    <GroupBox Header="{Binding TextLocalization.Graph}" Visibility="{Binding ControlVisibility}" Margin="25 0 0 0">
+        <StackPanel>
+            <Grid Width="450" Height="450">
+                <d3:Chart IsXAxisReversed="False" BottomTitle="{Binding TextLocalization.Temperature}" LeftTitle="{Binding TextLocalization.AbsoluteMark}">
+                    <ItemsControl ItemsSource="{Binding Lines}"></ItemsControl>
+                </d3:Chart>
+            </Grid>
+        </StackPanel>
+    </GroupBox>
 </UserControl>
