--- a/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionView.xaml
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionView.xaml
@@ -3,20 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:PiecewiseLinearFunctionDesigner.Module.Declaration.Views"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Visibility="{Binding ControlVisibility}">
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="{Binding TextLocalization.Function}" Grid.Row="0" Grid.Column="0"></TextBlock>
-        <TextBox Text="{Binding SelectedFunction.Name}" Grid.Row="0" Grid.Column="1"></TextBox>
-    </Grid>
+    <GroupBox Header="{Binding TextLocalization.FunctionParameters}" Visibility="{Binding ControlVisibility}" Padding="0 10 0 0">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="{Binding TextLocalization.FunctionName}" Grid.Row="0" Grid.Column="0"></TextBlock>
+            <TextBox Text="{Binding SelectedFunction.Name}" Grid.Row="0" Grid.Column="1"></TextBox>
+            <local:PointListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0 25 0 0"></local:PointListView>
+        </Grid>
+    </GroupBox>
 </UserControl>
