--- a/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionsListView.xaml
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionsListView.xaml
@@ -1,11 +1,14 @@
 ﻿<UserControl x:Class="PiecewiseLinearFunctionDesigner.Module.Declaration.Views.FunctionListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:PiecewiseLinearFunctionDesigner.Module.Declaration.Views"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <StackPanel Orientation="Vertical">
-        <TextBlock Text="{Binding TextLocalization.Functions}"></TextBlock>
-        <ComboBox ItemsSource="{Binding Functions}" DisplayMemberPath="Name" SelectedValuePath="Name" SelectedValue="{Binding SelectedFunction, Mode=TwoWay}"></ComboBox>
-        <Button Command="{Binding AddFunctionCommand}" Width="200" Content="{Binding TextLocalization.Add}" HorizontalAlignment="Left"></Button>
-    </StackPanel>
+    <GroupBox Header="{Binding TextLocalization.Functions}" Margin="0 0 25 20" Visibility="{Binding ControlVisibility}">
+        <StackPanel Orientation="Vertical">
+            <ComboBox ItemsSource="{Binding Functions}" DisplayMemberPath="Name" SelectedValuePath="Name" SelectedValue="{Binding SelectedFunction, Mode=TwoWay}"></ComboBox>
+            <Button Command="{Binding AddFunctionCommand}" Width="200" Content="{Binding TextLocalization.Add}" HorizontalAlignment="Left" Margin="0 10 0 0"></Button>
+            <local:FunctionView Margin="0 20 0 0"></local:FunctionView>
+        </StackPanel>
+    </GroupBox>
 </UserControl>
