--- a/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionsListView.xaml
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionsListView.xaml
@@ -7,7 +7,7 @@
     <GroupBox Header="{Binding TextLocalization.Functions}" Margin="0 0 25 20" Visibility="{Binding ControlVisibility}">
         <StackPanel Orientation="Vertical">
             <ComboBox ItemsSource="{Binding Functions}" DisplayMemberPath="Name" SelectedValuePath="Name" SelectedValue="{Binding SelectedFunction, Mode=TwoWay}"></ComboBox>
-            <Button Command="{Binding AddFunctionCommand}" Width="200" Content="{Binding TextLocalization.Add}" HorizontalAlignment="Left" Margin="0 10 0 0"></Button>
+            <Button Command="{Binding AddFunctionCommand}" Width="120" Content="{Binding TextLocalization.AddFunction}" HorizontalAlignment="Left" Margin="0 10 0 0"></Button>
             <local:FunctionView Margin="0 20 0 0"></local:FunctionView>
         </StackPanel>
     </GroupBox>
