feat: added reversable function calculation and demonstration

--- a/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionView.xaml
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Declaration/Views/FunctionView.xaml
@@ -13,6 +13,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"></ColumnDefinition>
@@ -20,7 +21,13 @@
             </Grid.ColumnDefinitions>
             <TextBlock Text="{Binding TextLocalization.FunctionName}" Grid.Row="0" Grid.Column="0"></TextBlock>
             <TextBox Text="{Binding ActiveFunction.Name}" Grid.Row="0" Grid.Column="1"></TextBox>
-            <local:PointListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0 25 0 0"></local:PointListView>
+            <CheckBox 
+                Content="{Binding TextLocalization.ReverseFunction}"
+                Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                IsEnabled="{Binding IsReversableFunction}"
+                IsChecked="{Binding IsReverseChecked}"
+                Margin="0 20 0 0"></CheckBox>
+            <local:PointListView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0 25 0 0"></local:PointListView>
         </Grid>
     </GroupBox>
 </UserControl>
