--- a/src/PiecewiseLinearFunctionDesigner.Module.Demonstration/Views/FunctionGraphView.xaml
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Demonstration/Views/FunctionGraphView.xaml
@@ -18,9 +18,25 @@
                             Stroke="Blue"
                             Height="450"
                             Width="450"
-                            />
+                        />
                         <d3:CircleMarkerGraph
                             Sources="{Binding MarkerSources}"
+                            Color="Black"
+                            Max="20"
+                            Min="1"
+                        />
+                        <d3:LineGraph
+                            Description="{Binding TextLocalization.ReverseFunction}"
+                            Points="{Binding ReversedPointCollection}"
+                            Visibility="{Binding ReversedGraphVisibility}"
+                            StrokeThickness="2"
+                            Stroke="Orange"
+                            Height="450"
+                            Width="450"
+                        />
+                        <d3:CircleMarkerGraph
+                            Sources="{Binding ReversedMarkerSources}"
+                            Visibility="{Binding ReversedGraphVisibility}"
                             Color="Black"
                             Max="20"
                             Min="1"
